--- a/css/main.css
+++ b/css/main.css
@@ -9,10 +9,25 @@
 	box-sizing: border-box;
 }
 
+figure {
+    display: block;
+    -webkit-margin-before: 0em;
+    -webkit-margin-after: 0em;
+    -webkit-margin-start: 0px;
+    -webkit-margin-end: 0px;
+}
+
+img {
+	max-width: 100%;
+	display: block;
+	height: auto;
+}
+
+
 /* 3.1 site structure */
 .wrapper {
 	width: 60%;
-	background-color: silver;
+	background-color: #3D3D3D;
 	margin: 0 auto;
 }
 
@@ -36,11 +51,11 @@
 	width: 50%;
 }
 
-.col-1-3 {
+.col-1-3, .col-3-9 {
 	width: 33.33%;
 }
 
-.col-1-4 {
+.col-1-4, .col-3-12 {
 	width: 25%;
 }
 
@@ -72,9 +87,78 @@
 	width: 83.33%;
 }
 
+.col-1-7 {
+	width: 14.28%;
+}
+
+.col-3-7 {
+	width: 42.8%;
+}
+
+.col-4-7 {
+	width: 57.1%;
+}
+
+.col-1-8 {
+	width: 12.5%;
+}
+
+.col-6-8 {
+	width: 75%;
+}
+
+.col-2-8 {
+	width: 25%;
+}
+
+.col-1-9 {
+	width: 11.11%;
+}
+
+.col-1-10 {
+	width: 10%;
+}
+
+.col-2-10 {
+	width: 20%;
+}
+
+.col-1-11 {
+	width: 9%;
+}
+
+.col-7-11 {
+	width: 63.6%;
+}
+
+.col-4-11 {
+	width: 36.4%;
+}
+
+.col-1-12 {
+	width: 8.33%;
+}
+
+.col-1-13 {
+	width: 7.69%;
+}
+
+.col-1-13 {
+	width: 7.69%;
+}
+
+.col-8-13 {
+	width: 61.53%;
+}
+
+.col-5-13 {
+	width: 38.46%;
+}
+
+
 [class*="col-"] div {
 	height: 50px;
-	background-color: coral;
+	background-color: #81DACE;
 }
 
 /* 6.0 media querie/ responsive */
@@ -86,15 +170,15 @@
 		width: 95%;
 	}
 	
-	.col-1-4:nth-child(even), .col-1-6:nth-child(3), .col-1-5 {
+	.col-1-4:nth-child(even), .col-1-6:nth-child(3), .col-1-5, .col-1-7, .col-1-8:nth-child(even), .col-1-9:nth-child(3), .col-1-9:nth-child(6), .col-1-10:nth-child(even), .col-1-11, .col-1-12:nth-child(3), .col-1-12:nth-child(6), .col-1-12:nth-child(9), .col-1-13 {
 		padding-right: 0;
 	}
 	
-	.col-1-6 {
+	.col-1-6, .col-1-9, .col-1-12 {
 		width: 33.33%;
 	}
 	
-	.col-1-4, .col-3-4 {
+	.col-1-4, .col-3-4, .col-1-8, .col-1-10 {
 		width: 50%;
 	}
 	
@@ -102,7 +186,7 @@
 		width: 66.66%;
 	}
 	
-	.col-1-5 {
+	.col-1-5, .col-1-7, .col-1-11, .col-1-13 {
 		width: 100%;
 	}
 	
